# OpenCL

./: README.md
array_gpu/: array_gpu.cl  array_gpu.h  main  main.cpp
sierpinski/: CMakeLists.txt  sierpinski.cpp
sierpinski/clu/: clu.h  clu_runtime.cpp
sum/: sum  sum.cl  sum.cpp
test/: Makefile  main  main.cpp
test1/: main.cpp
